Base commit of typescript branch

--- a/src/components/Blog/Blog.module.scss
+++ b/src/components/Blog/Blog.module.scss
@@ -1,6 +1,6 @@
 /* autoprefixer grid: autoplace */
-.preview {
-    grid-area: preview;
+.sectionBlog {
+    grid-area: about;
 
     background-color: var(--bg-color);
 }
