--- a/src/components/Contacts/Contacts.module.scss
+++ b/src/components/Contacts/Contacts.module.scss
@@ -1,5 +1,5 @@
 /* autoprefixer grid: autoplace */
-.contacts {
+.sectionContacts {
     grid-area: contacts;
 
     background-color: var(--bg-color);
