--- a/src/components/Forum/Forum.module.scss
+++ b/src/components/Forum/Forum.module.scss
@@ -1,6 +1,6 @@
 /* autoprefixer grid: autoplace */
-.works {
-    grid-area: works;
+.sectionForum {
+    grid-area: skills;
 
     background-color: var(--bg-color);
 }
