--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -1,6 +1,6 @@
 /* autoprefixer grid: autoplace */
-.about {
-    grid-area: about;
+.sectionMain {
+    grid-area: preview;
 
     background-color: var(--bg-color);
 }
