--- a/src/components/Shop/Shop.module.scss
+++ b/src/components/Shop/Shop.module.scss
@@ -1,6 +1,6 @@
 /* autoprefixer grid: autoplace */
-.skills {
-    grid-area: skills;
+.sectionShop {
+    grid-area: works;
 
     background-color: var(--bg-color);
 }
