--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,7 +4,7 @@
     grid-area: header;
     display: flex;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
     background-color: var(--bg-color);
 
     .logo { 
