State managment with myRedux completed

--- a/src/components/Blog/Blog.module.scss
+++ b/src/components/Blog/Blog.module.scss
@@ -1,6 +1,6 @@
 /* autoprefixer grid: autoplace */
 .sectionBlog {
-    grid-area: about;
+    grid-area: main;
 
-    background-color: var(--bg-color);
+    background-color: var(--super-light-color);
 }
