--- a/src/components/Contacts/Contacts.module.scss
+++ b/src/components/Contacts/Contacts.module.scss
@@ -1,6 +1,6 @@
 /* autoprefixer grid: autoplace */
 .sectionContacts {
-    grid-area: contacts;
+    grid-area: main;
 
-    background-color: var(--bg-color);
+    background-color: var(--super-light-color);
 }
