--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -2,7 +2,7 @@
 .nav {
     grid-area: menu;
 
-    background-color: var(--bg-color);
+    background-color: var(--super-light-color);
 
     .navList {
         list-style-type: none;
