--- a/src/App.scss
+++ b/src/App.scss
@@ -5,13 +5,9 @@
   max-width: 1200px;
   display: grid;
   grid-template-columns: 1fr 3fr;
-  grid-template-rows: repeat(7 auto);
+  grid-template-rows: auto;
   grid-gap: 0.5em;
   grid-template-areas: "header header"
-                       "menu preview"
-                       "menu about"
-                       "menu skills"
-                       "menu works"
-                       "menu contacts"
+                       "menu main"
                        "footer footer";
 }
