--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,6 +1,9 @@
 /* autoprefixer grid: autoplace */
 .footer {
     grid-area: footer;
+    display: flex;
+    justify-content: space-around;
+    padding: 0.5em 0;
 
-    background-color: var(--bg-color);
+    background-color: var(--super-light-color);
 }
