--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -1,6 +1,23 @@
 /* autoprefixer grid: autoplace */
 .sectionMain {
-    grid-area: preview;
+    grid-area: main;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: repeat(2 auto);
+    grid-gap: 0.2em;
+    grid-template-areas: "heading info"
+                         "links info";
+    background-color: var(--super-light-color);
 
-    background-color: var(--bg-color);
+    .heading {
+        grid-area: heading;
+    }
+
+    .navLinks {
+        grid-area: links;
+    }
+
+    .sectionInfo {
+       grid-area: info; 
+    }  
 }
