--- a/src/components/Shop/Shop.module.scss
+++ b/src/components/Shop/Shop.module.scss
@@ -1,6 +1,6 @@
 /* autoprefixer grid: autoplace */
 .sectionShop {
-    grid-area: works;
+    grid-area: main;
 
-    background-color: var(--bg-color);
+    background-color: var(--super-light-color);
 }
