Cookie, login, auth/me. Auth-reducer → Header; NavLink→ Login follow-unfollow api, requests: post, delete → action creators: follow, unfollow DAL, вынос запросов в api, axios.create, options в axios, baseURL, usersAPI button disabled: start->(follow\unfollow)→ (true, id), finish→ (false,id); id into ids array in state

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -27,7 +27,7 @@
         color: var(--dark-color);
     }
 
-    .login {
+    .loginButton {
         font-family: 'Lobster';
         font-size: 1rem;
         letter-spacing: 0.15em;
@@ -41,6 +41,12 @@
         border-radius: 100%;
         line-height: 1;
         cursor: pointer;
+
+        & > a {
+            color: var(--light-color);
+            text-decoration: none;
+            text-transform: lowercase;
+        }
     }
 }
 
