redux-form Login redux-form field validation. Замыкание FormControls — wrapper for forms connect Login, dispatch(thunk)→loginAPI; Redirect→Profile redux-form → login/autherror → stopSubmit; _error→props.error

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -41,6 +41,7 @@
         border-radius: 100%;
         line-height: 1;
         cursor: pointer;
+        text-decoration: none;
 
         & > a {
             color: var(--light-color);
