--- a/src/components/Forum/Forum.module.scss
+++ b/src/components/Forum/Forum.module.scss
@@ -1,6 +1,58 @@
 /* autoprefixer grid: autoplace */
-.sectionForum {
-    grid-area: main;
-
+.forumPage {
     background-color: var(--super-light-color);
+        
+    .form {
+        width: 50%;
+
+        .fieldset {
+            padding-top: 2em;
+
+            legend {
+                text-transform: uppercase;
+            }
+        
+            .button {
+                padding: 0.3em 1em;
+                margin-top: 1em;
+                text-transform: uppercase;
+            }
+            .button:hover {
+                cursor: pointer;
+                background-color: var(--dark-color);
+                color: var(--super-light-color);                
+            }
+        }
+    }
+
+    .media {
+        grid-area: main;
+        display: flex;
+        margin-top: 1em;
+        background-color: var(--dark-color);
+        color: var(--super-light-color);
+        padding: 1em;
+        border-top-left-radius: 10%;
+        border-bottom-right-radius: 10%;
+        
+        .user {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            & > img {
+                width: 5em;
+            }
+        }
+
+        .message {
+            flex: 3;
+            padding-left: 2em;
+
+            & > h3 {
+                text-align: left;
+            }
+        }        
+    }
 }
